#nghia.le sửa lại đa ngôn ngữ

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,10 +1,32 @@
 {
-    "Action": "Action",
-    "Hello": "Hello.",
-    "Create": "Create",
-    "Create, :name": "Create :name",
-    "real_estate": "Real Estate",
-    "name": "name",
-    "value": "Value",
-    "address": "Address"
+    "Action"          : "Action",
+    "Hello"           : "Hello.",
+    "Create"          : "Create",
+    "Create, :name"   : "Create :name",
+    "real_estate"     : "Real Estate",
+    "name"            : "name",
+    "value"           : "Value",
+    "address"         : "Address",
+    "Account"         : "Account",
+    "Cart"            : "Cart",
+    "Air Conditioning": "Air Conditioning",
+    "BBQ Area"        : "BBQ Area",
+    "CCTV"            : "CCTV",
+    "Concierge"       : "Concierge",
+    "Fitness"         : "Fitness",
+    "Garden"          : "Garden",
+    "Library"         : "Library",
+    "Mountain View"   : "Mountain View",
+    "Parking"         : "Parking",
+    "Playground"      : "Playground",
+    "Sea/Ocean View"  : "Sea/Ocean View",
+    "Security"        : "Security",
+    "Single Storey"   : "Single Storey",
+    "Tennis"          : "Tennis",
+    "Wi Fi"           : "Wi Fi",
+    "Tivi"            : "Tivi",
+    "Bedroom"         : "Bedroom",
+    "Bathroom"        : "Bathroom",
+    "Year age"        : "Year age",
+    "Buy"             : "Buy"
 }
