#nghia.le updated footer đa ngôn ngữ

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,33 +1,43 @@
 {
-    "Action"          : "Action",
-    "Hello"           : "Hello.",
-    "Create"          : "Create",
-    "Create, :name"   : "Create :name",
-    "real_estate"     : "Real Estate",
-    "name"            : "name",
-    "value"           : "Value",
-    "address"         : "Address",
-    "Account"         : "Account",
-    "Cart"            : "Cart",
+    "Action": "Action",
+    "Hello": "Hello.",
+    "Create": "Create",
+    "Create, :name": "Create :name",
+    "real_estate": "Real Estate",
+    "name": "name",
+    "value": "Value",
+    "address": "Address",
+    "Account": "Account",
+    "Cart": "Cart",
     "Air Conditioning": "Air Conditioning",
-    "BBQ Area"        : "BBQ Area",
-    "CCTV"            : "CCTV",
-    "Concierge"       : "Concierge",
-    "Fitness"         : "Fitness",
-    "Garden"          : "Garden",
-    "Library"         : "Library",
-    "Mountain View"   : "Mountain View",
-    "Parking"         : "Parking",
-    "Playground"      : "Playground",
-    "Sea/Ocean View"  : "Sea/Ocean View",
-    "Security"        : "Security",
-    "Single Storey"   : "Single Storey",
-    "Tennis"          : "Tennis",
-    "Wi Fi"           : "Wi Fi",
-    "Tivi"            : "Tivi",
-    "Bedroom"         : "Bedroom",
-    "Bathroom"        : "Bathroom",
-    "Year age"        : "Year age",
-    "Buy"             : "Buy",
-    "Customer reviews": "Customer reviews"
+    "BBQ Area": "BBQ Area",
+    "CCTV": "CCTV",
+    "Concierge": "Concierge",
+    "Fitness": "Fitness",
+    "Garden": "Garden",
+    "Library": "Library",
+    "Mountain View": "Mountain View",
+    "Parking": "Parking",
+    "Playground": "Playground",
+    "Sea/Ocean View": "Sea/Ocean View",
+    "Security": "Security",
+    "Single Storey": "Single Storey",
+    "Tennis": "Tennis",
+    "Wi Fi": "Wi Fi",
+    "Tivi": "Tivi",
+    "Bedroom": "Bedroom",
+    "Bathroom": "Bathroom",
+    "Year age": "Year age",
+    "Buy": "Buy",
+    "Customer reviews": "Customer reviews",
+    "CONTACT US": "CONTACT US",
+    "POPULAR PLACES": "POPULAR PLACES",
+    "NEWSLETTER": "NEWSLETTER",
+    "Subscribe your email to get the latest news and new offer also discount": "Subscribe your email to get the latest news and new offer also discount",
+    "Email address": "Email address",
+    "Online": "Online",
+    "Visits today": "Visits today",
+    "Access times": "Access times",
+    "footer1": "BatDongSanCanTho is a free news site for buying and selling real estate, renting houses, cheap apartments with millions of listings and hundreds of thousands of visits every day. The hottest information channel about real estate in Vietnam. Update real estate news fastest and most accurate.",
+    "footer2": "BatDongSanCanTho - Real Estate Can Tho - Buy and Sell Real Estate, Real Estate largest Can Tho"
 }
