--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1,33 +1,43 @@
 {
-    "Action"          : "Chức năng",
-    "Hello"           : "Xin chào.",
-    "Create"          : "Thêm",
-    "Create, :name"   : "Thêm :name",
-    "real_estate"     : "Bất động sản",
-    "name"            : "Tên",
-    "value"           : "Giá trị",
-    "address"         : "Địa chỉ",
-    "Account"         : "Tài khoản",
-    "Cart"            : "Giỏ hàng",
+    "Action": "Chức năng",
+    "Hello": "Xin chào.",
+    "Create": "Thêm",
+    "Create, :name": "Thêm :name",
+    "real_estate": "Bất động sản",
+    "name": "Tên",
+    "value": "Giá trị",
+    "address": "Địa chỉ",
+    "Account": "Tài khoản",
+    "Cart": "Giỏ hàng",
     "Air Conditioning": "Máy lạnh",
-    "BBQ Area"        : "Khu vực BBQ",
-    "CCTV"            : "CCTV",
-    "Concierge"       : "Nhân viên lễ tân",
-    "Fitness"         : "Phòng tập",
-    "Garden"          : "Sân vườn",
-    "Library"         : "Thư viện",
-    "Mountain View"   : "Cảnh núi",
-    "Parking"         : "Bãi đậu xe",
-    "Playground"      : "Sân chơi",
-    "Sea/Ocean View"  : "Cảnh biển",
-    "Security"        : "Bảo vệ",
-    "Single Storey"   : "Tầng trệt",
-    "Tennis"          : "Sân tennis",
-    "Wi Fi"           : "Wi Fi",
-    "Tivi"            : "Tivi",
-    "Bedroom"         : "Phòng ngủ",
-    "Bathroom"        : "Phòng tắm",
-    "Year age"        : "Năm",
-    "Buy"             : "Mua",
-    "Customer reviews": "Khách hàng nhận xét"
+    "BBQ Area": "Khu vực BBQ",
+    "CCTV": "CCTV",
+    "Concierge": "Nhân viên lễ tân",
+    "Fitness": "Phòng tập",
+    "Garden": "Sân vườn",
+    "Library": "Thư viện",
+    "Mountain View": "Cảnh núi",
+    "Parking": "Bãi đậu xe",
+    "Playground": "Sân chơi",
+    "Sea/Ocean View": "Cảnh biển",
+    "Security": "Bảo vệ",
+    "Single Storey": "Tầng trệt",
+    "Tennis": "Sân tennis",
+    "Wi Fi": "Wi Fi",
+    "Tivi": "Tivi",
+    "Bedroom": "Phòng ngủ",
+    "Bathroom": "Phòng tắm",
+    "Year age": "Năm",
+    "Buy": "Mua",
+    "Customer reviews": "Khách hàng nhận xét",
+    "CONTACT US": "LIÊN HỆ",
+    "POPULAR PLACES": "PHỔ BIẾN",
+    "NEWSLETTER": "BẢN TIN",
+    "Subscribe your email to get the latest news and new offer also discount": "Đăng ký để nhận được tin tức và ưu đãi cũng giảm giá mới nhất",
+    "Email address": "Địa chỉ email",
+    "Online": "Đang trực tuyến",
+    "Visits today": "Lượt truy cập hôm nay",
+    "Access times": "Lượt truy cập",
+    "footer1": "BatDongSanCanTho là trang đăng tin miễn phí mua bán bất động sản, cho thuê nhà đất, căn hộ giá rẻ với hàng triệu tin đăng và hàng trăm ngàn lượt truy cập mỗi ngày. Kênh thông tin hot nhất về bất động sản tại Việt Nam. Cập nhật tin tức bất động sản nhanh nhất và chính xác nhất.",
+    "footer2": "BatDongSanCanTho – Bất Động Sản Cần Thơ – Mua Bán Nhà Đất, Địa Ốc Online lớn nhất Cần Thơ"
 }
