#phuc.nguyen update 6/5/2020

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -120,7 +120,8 @@
     "You have appoinment":"You have appoinment",
     "Content appointment ":"Content appoinment" ,
     "Time appointment ":"Time appoinment" ,
-    "Status appointment ":"Status appoinment" 
+    "Status appointment ":"Status appoinment" ,
+    "Logout": "Đăng xuất"
    
     
 
