#tran.phung  Fix lại lịch hẹn..thêm nhân viên phụ trách
Update 07/05/2020  time: 3:21

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -117,11 +117,12 @@
     "Address":"Address",
     "Id":"Identity",
     "Save":"Save" ,
-    "You have appoinment":"You have appoinment",
-    "Content appointment ":"Content appoinment" ,
-    "Time appointment ":"Time appoinment" ,
-    "Status appointment ":"Status appoinment" ,
-    "Logout": "Đăng xuất"
+    "You have appoinment":"Appoinment",
+    "Content appointment":"Content" ,
+    "Time appointment":"Time appoinment" ,
+    "Status appointment":"Status" ,
+    "Logout":"Đăng xuất",
+    "Responsible": "Responsible"
    
     
 
