#tran.phung  thêm nút xóa bình luận, css lại trang single_list
update: 9/5/2020  time: 3:18

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -121,7 +121,7 @@
     "Content appointment":"Content" ,
     "Time appointment":"Time appoinment" ,
     "Status appointment":"Status" ,
-    "Logout":"Đăng xuất",
+    "Logout":"Logout",
     "Responsible": "Responsible"
    
     
