#tran.phung backup dL, thêm button trong file single_list, thêm ảnh banner
update: 13/05/2020  time: 9:21

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -67,7 +67,7 @@
     "Post new": "New Post",
     "Book meet": "Book Schedule",
     "Report": "Report",
-    "Dashboard": "Dashboard"
+    "Dashboard": "Dashboard",
     "Detial description":"Detail Description",
     "Map":"Map",
     "convenient":"Convenient",
