#nghia.le thanh toán khi đăng bài

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -124,5 +124,6 @@
     "Time appointment": "Thời gian",
     "Status appointment": "Trạng thái",
     "Logout": "Đăng xuất",
-    "Responsible": "Nhân viên phụ trách"
+    "Responsible": "Nhân viên phụ trách",
+    "Day": "Ngày"
 }
