nghia.le sửa lỗi đa ngôn ngữ detail

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -68,7 +68,7 @@
     "Book meet": "Book Schedule",
     "Report": "Report",
     "Dashboard": "Dashboard",
-    "Detial description": "Detail Description",
+    "Detail description": "Detail Description",
     "Map": "Map",
     "convenient": "Convenient",
     "Rating": "Rating",
