--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -69,7 +69,7 @@
     "Book meet": "Đặt lịch hẹn",
     "Report": "Báo cáo",
     "Dashboard": "Quản trị",
-    "Detial description": "Mô tả chi tiết",
+    "Detail description": "Mô tả chi tiết",
     "Map": "Bản đồ",
     "convenient": "Tiện Nghi",
     "Rating": "Đánh giá",
