nghia.le xem lại đơn hàng

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -124,5 +124,6 @@
     "Status appointment": "Status",
     "Logout": "Logout",
     "Responsible": "Responsible",
-    "Day": "Days"
+    "Day": "Days",
+    "Bill": "My order"
 }
