--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -125,5 +125,6 @@
     "Status appointment": "Trạng thái",
     "Logout": "Đăng xuất",
     "Responsible": "Nhân viên phụ trách",
-    "Day": "Ngày"
+    "Day": "Ngày",
+    "Bill": "Đơn hàng của bạn"
 }
